working now, yay

--- a/public/index.html
+++ b/public/index.html
@@ -48,9 +48,11 @@
     </header>
     <main>
       <h1>T. J. Alferes</h1>
-      <p><a href="articles/index.html">Articles</a></p>
+      <p><a href="articles/articles.html">Articles</a></p>
     </main>
     <footer>
+      <a>Footer Link</a>
+      <a>Footer Link</a>
       <a>Footer Link</a>
       <a>Footer Link</a>
       <a>Footer Link</a>
