--- a/public/index.html
+++ b/public/index.html
@@ -5,40 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>T. J. Alferes</title>
   <link href="favicon.ico" rel="shortcut icon">
-  <!-- <link href="index.css" rel="stylesheet"> -->
-  <style>
-    * {
-      padding: 0;
-      margin: 0;
-      box-sizing: border-box;
-    }
-    .container {
-      display: grid;
-      grid-template-rows: 92px auto 92px;
-      grid-template-areas: none;
-      min-height: 100vh;
-    }
-    header {
-
-    }
-    main {
-      background-color: #eee;
-    }
-    footer {
-      background-color: rgb(71, 44, 102);
-      color: rgb(241, 196, 45);
-    }
-    .header-top {
-      height: 22px;
-      background-color: #000;
-      color: #eee;
-    }
-    .header-bottom {
-      height: 70px;
-      background-color: #fff;
-      color: #eee;
-    }
-  </style>
+  <link href="index.css" rel="stylesheet">
 </head>
 <body>
 	<div class="container">
