--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,23 @@
 <body>
 	<div class="container">
     <header>
-      <div class="header-top">Header Top</div>
-      <div class="header-bottom">Header Bottom</div>
+      <div class="header-top">
+        <a href="index.html">HOME</a>
+        <a href="biography/biography.html">BIOGRAPHY</a>
+        <a href="paintings/paintings.html">PAINTINGS</a>
+        <a href="sites/sites.html">SITES</a>
+        <a href="articles/articles.html">ARTICLES</a>
+        <a href="books/books.html">BOOKS</a>
+      </div>
+      <div class="header-bottom">
+        <span class="website-title">TJALFERES.net</span>
+        <span class="website-subtitle">Website of Timothy James Alferes</span>
+      </div>
     </header>
     <main>
       <h1>T. J. Alferes</h1>
-      <p><a href="articles/articles.html">Articles</a></p>
     </main>
     <footer>
-      <a>Footer Link</a>
-      <a>Footer Link</a>
       <a>Footer Link</a>
       <a>Footer Link</a>
       <a>Footer Link</a>
