--- a/public/biography/biography.html
+++ b/public/biography/biography.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<title>Biography - tjalferes.net</title>
-  <link href="favicon.ico" rel="shortcut icon">
+	<title>Biography - TJALFERES.net</title>
+  <link href="../images/favicon.ico" rel="shortcut icon">
   <link href="index.css" rel="stylesheet">
   <link href="biography.css" rel="stylesheet">
 </head>
@@ -12,12 +12,18 @@
 	<div class="container">
     <header>
       <div class="header-top">
-        <a href="index.html">HOME</a>
-        <a href="biography/biography.html">BIOGRAPHY</a>
-        <a href="articles/articles.html">ARTICLES</a>
+        <a href="/index.html">HOME</a>
+        <a href="/biography/biography.html" id="current-page">BIOGRAPHY</a>
+        <a href="/paintings/paintings.html">PAINTINGS</a>
+        <a href="/sites/sites.html">SITES</a>
+        <a href="/articles/articles.html">ARTICLES</a>
+        <a href="/books/books.html">BOOKS</a>
       </div>
       <div class="header-bottom">
-        Header Bottom
+        <div class="logo">
+          <span class="website-title">TJALFERES.net</span>
+          <span class="website-subtitle">Website of Timothy James Alferes</span>
+        </div>
       </div>
     </header>
     <main>
@@ -25,28 +31,28 @@
         <h1>Biography</h1>
         <img src="../images/t-j-alferes-with-green-cheeked-conure-des-plaines-illinois-september-19-2018.png">
         <p>
-          Timothy James Alferes (Evanston, Illinois, 1988) is a software engineer,
-          artist, and author.
-          <br><br>
-          While working in construction and agriculture,
-          he studied the works of Heraclitus, Parmenides,
-          Socrates/Plato, Diogenes, Jesus, Plotinus, Boethius,
-          Eckhart von Hochheim, Shakespeare, Erasmus, Kierkegaard,
+          <span id="name">Timothy James Alferes</span>
+          (Evanston, Illinois, 1988) is a
+          software engineer, artist, and author.
+          While working in construction and farming,
+          he studied world religions and philosophy with a focus on the works of
+          Heraclitus, Parmenides, Socrates/Plato, Diogenes, Jesus, Plotinus,
+          Boethius, Eckhart von Hochheim, Shakespeare, Erasmus, Kierkegaard,
           Gautama Siddhartha, Nagarjuna, Shantideva, Bodhidharma, Huineng,
           Yung-chia Hsuan-chueh, Huang Po, Hakuin, Junayd, Hujwiri, Ghazali,
-          Suhrawardi, Ibn 'Arabi, Rumi, Nasreddin, Hafez, Sanai,
-          and many others.
-          <br><br>
-          As an artist he first became known for his painting "Emptiness" (2014).
+          Suhrawardi, Ibn 'Arabi, Rumi, Nasreddin, Hafez, and Sanai.
+          As an artist he first became known for his painting
+          <a href="/paintings/still-life/emptiness.html">Emptiness</a>
+          (2014).
           <br><br>
           During 2016, having become partially disabled by a chronic illness,
-          he began teaching himself computer programming and application
-          development for web and IoT.
-          <br><br>
-          He is currently studying computer science and mathematics,
-          composing several still life, landscapes, genre, and
-          mythological paintings, and writing several books on gardening, cooking,
-          history, technology, and philosophy.
+          he stopped work in construction and farming, and began teaching
+          himself computer programming and application development for web and
+          IoT.
+          He is currently studying economics, computer science, and mathematics,
+          composing several still life, landscape, genre, and mythological
+          paintings, and writing several books on gardening, cooking, history,
+          technology, and philosophy.
         </p>
       </div>
     </main>
