--- a/public/paintings/paintings.html
+++ b/public/paintings/paintings.html
@@ -3,17 +3,18 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<title>TJALFERES.net</title>
-  <link href="images/favicon.ico" rel="shortcut icon">
+	<title>Paintings - TJALFERES.net</title>
+  <link href="../images/favicon.ico" rel="shortcut icon">
   <link href="index.css" rel="stylesheet">
+  <link href="paintings.css" rel="stylesheet">
 </head>
 <body>
 	<div class="container">
     <header>
       <div class="header-top">
-        <a href="/index.html" id="current-page">HOME</a>
+        <a href="/index.html">HOME</a>
         <a href="/biography/biography.html">BIOGRAPHY</a>
-        <a href="/paintings/paintings.html">PAINTINGS</a>
+        <a href="/paintings/paintings.html" id="current-page">PAINTINGS</a>
         <a href="/sites/sites.html">SITES</a>
         <a href="/articles/articles.html">ARTICLES</a>
         <a href="/books/books.html">BOOKS</a>
@@ -26,7 +27,13 @@
       </div>
     </header>
     <main>
-      <h1>T. J. Alferes</h1>
+      <div class="paintings">
+        <h1>Paintings</h1>
+        <p><a href="myth/myth.html">Myth</a></p>
+        <p><a href="genre/genre.html">Genre</a></p>
+        <p><a href="landscape/landscape.html">Landscape</a></p>
+        <p><a href="still-life/still-life.html">Still Life</a></p>
+      </div>
     </main>
     <footer>
       <a>Footer Link</a>
