--- a/public/biography/biography.html
+++ b/public/biography/biography.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>Biography - TJALFERES.net</title>
   <link href="../images/favicon.ico" rel="shortcut icon">
-  <link href="index.css" rel="stylesheet">
+  <link href="/index.css" rel="stylesheet">
   <link href="biography.css" rel="stylesheet">
 </head>
 <body>
@@ -42,7 +42,7 @@
           Yung-chia Hsuan-chueh, Huang Po, Hakuin, Junayd, Hujwiri, Ghazali,
           Suhrawardi, Ibn 'Arabi, Rumi, Nasreddin, Hafez, and Sanai.
           As an artist he first became known for his painting
-          <a href="/paintings/still-life/emptiness.html">Emptiness</a>
+          <a href="/paintings/still-life/emptiness/emptiness.html">Emptiness</a>
           (2014).
           <br><br>
           During 2016, having become partially disabled by a chronic illness,
