--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>TJALFERES.net</title>
   <link href="images/favicon.ico" rel="shortcut icon">
-  <link href="index.css" rel="stylesheet">
+  <link href="/index.css" rel="stylesheet">
 </head>
 <body>
 	<div class="container">
@@ -26,7 +26,9 @@
       </div>
     </header>
     <main>
-      <h1>T. J. Alferes</h1>
+      <div id="home">
+        <h1>EDIT</h1>
+      </div>
     </main>
     <footer>
       <a>Footer Link</a>
