--- a/public/paintings/still-life/still-life.html
+++ b/public/paintings/still-life/still-life.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>Still Life Paintings - TJALFERES.net</title>
   <link href="../../images/favicon.ico" rel="shortcut icon">
-  <link href="index.css" rel="stylesheet">
+  <link href="/index.css" rel="stylesheet">
   <link href="still-life.css" rel="stylesheet">
 </head>
 <body>
@@ -29,15 +29,15 @@
     <main>
       <div id="thumbs">
         <h1>Still Life</h1>
-        <a href=""><div class="thumb">
+        <a href="emptiness/emptiness.html"><div class="thumb">
           <img src="../../images/paintings/still-life/t-j-alferes-painting-still-life-emptiness-2014-400px.jpg">
           <span>Emptiness</span>
         </div></a>
-        <a href=""><div class="thumb">
+        <a href="rotting-mirepoix/rotting-mirepoix.html"><div class="thumb">
           <img src="../../images/paintings/still-life/t-j-alferes-painting-still-life-rotting-mirepoix-2015-400px.jpg">
           <span>Rotting Mirepoix</span>
         </div></a>
-        <a href=""><div class="thumb">
+        <a href="old-teapot/old-teapot.html"><div class="thumb">
           <img src="../../images/paintings/still-life/t-j-alferes-painting-still-life-old-teapot-2016-200px.jpg">
           <span>Old Teapot</span>
         </div></a>
