prod build script

--- a/public/index.html
+++ b/public/index.html
@@ -31,9 +31,9 @@
       </div>
     </main>
     <footer>
-      <a>Footer Link</a>
-      <a>Footer Link</a>
-      <a>Footer Link</a>
+      <div id="social-media-links">
+        <span><a href="https://facebook.com/timothyjamesalferes">Link To My Facebook</a></span>
+      </div>
     </footer>
   </div>
   <script src="/index-bundle.js"></script>
