more npm scripts setup todo

--- a/public/paintings/paintings.html
+++ b/public/paintings/paintings.html
@@ -36,9 +36,13 @@
       </div>
     </main>
     <footer>
-      <a>Footer Link</a>
-      <a>Footer Link</a>
-      <a>Footer Link</a>
+      <div id="social-media-links">
+        <a href="https://github.com/TJAlferes">GitHub</a>
+        <a href="https://stackoverflow.com/users/10400033/t-j-alferes">StackOverflow</a>
+        <a href="https://www.linkedin.com/in/tjalferes">LinkedIn</a>
+        <a href="https://twitter.com/tjalferes">Twitter</a>
+        <a href="https://facebook.com/timothyjamesalferes">Facebook</a>
+      </div>
     </footer>
   </div>
   <script src="/index-bundle.js"></script>
