--- a/public/biography/biography.html
+++ b/public/biography/biography.html
@@ -57,9 +57,13 @@
       </div>
     </main>
     <footer>
-      <a>Footer Link</a>
-      <a>Footer Link</a>
-      <a>Footer Link</a>
+      <div id="social-media-links">
+        <a href="https://github.com/TJAlferes">GitHub</a>
+        <a href="https://stackoverflow.com/users/10400033/t-j-alferes">StackOverflow</a>
+        <a href="https://www.linkedin.com/in/tjalferes"><img src="/images/linkedin-logo-24px.png">LinkedIn</a>
+        <a href="https://twitter.com/tjalferes">Twitter</a>
+        <a href="https://facebook.com/timothyjamesalferes"><img src="/images/facebook-logo-24px.png">Facebook</a>
+      </div>
     </footer>
   </div>
   <script src="/index-bundle.js"></script>
