--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,11 @@
     </main>
     <footer>
       <div id="social-media-links">
-        <span><a href="https://facebook.com/timothyjamesalferes">Link To My Facebook</a></span>
+        <a href="https://github.com/TJAlferes">GitHub</a>
+        <a href="https://stackoverflow.com/users/10400033/t-j-alferes">StackOverflow</a>
+        <a href="https://www.linkedin.com/in/tjalferes"><img src="/images/linkedin-logo-24px.png">LinkedIn</a>
+        <a href="https://twitter.com/tjalferes">Twitter</a>
+        <a href="https://facebook.com/timothyjamesalferes"><img src="/images/facebook-logo-24px.png">Facebook</a>
       </div>
     </footer>
   </div>
