social media links

--- a/public/paintings/paintings.html
+++ b/public/paintings/paintings.html
@@ -37,11 +37,11 @@
     </main>
     <footer>
       <div id="social-media-links">
-        <a href="https://github.com/TJAlferes">GitHub</a>
-        <a href="https://stackoverflow.com/users/10400033/t-j-alferes">StackOverflow</a>
-        <a href="https://www.linkedin.com/in/tjalferes">LinkedIn</a>
-        <a href="https://twitter.com/tjalferes">Twitter</a>
-        <a href="https://facebook.com/timothyjamesalferes">Facebook</a>
+        <a href="https://github.com/TJAlferes"><img src="/images/github-logo-24px.png" alt="GitHub"></a>
+        <a href="https://stackoverflow.com/users/10400033/t-j-alferes"><img src="/images/stackoverflow-logo-24px.png" alt="stackoverflow"></a>
+        <a href="https://www.linkedin.com/in/tjalferes"><img src="/images/linkedin-logo-24px.png" alt="LinkedIn"></a>
+        <a href="https://twitter.com/tjalferes"><img src="/images/twitter-logo-24px.png" alt="Twitter"></a>
+        <a href="https://facebook.com/timothyjamesalferes"><img src="/images/facebook-logo-24px.png" alt="Facebook"></a>
       </div>
     </footer>
   </div>
