--- a/src/books/books.html
+++ b/src/books/books.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<title>Sites - TJALFERES.net</title>
-  <link href="images/favicon.ico" rel="shortcut icon">
+	<title>Books - TJALFERES.net</title>
+  <link href="../images/favicon.ico" rel="shortcut icon">
   <link href="/index.css" rel="stylesheet">
-  <link href="sites.css" rel="stylesheet">
+  <link href="books.css" rel="stylesheet">
 </head>
 <body>
 	<div class="container">
@@ -15,9 +15,9 @@
         <a href="/index.html">HOME</a>
         <a href="/biography/biography.html">BIOGRAPHY</a>
         <a href="/paintings/paintings.html">PAINTINGS</a>
-        <a href="/sites/sites.html" id="current-page">SITES</a>
+        <a href="/sites/sites.html">SITES</a>
         <a href="/articles/articles.html">ARTICLES</a>
-        <a href="/books/books.html">BOOKS</a>
+        <a href="/books/books.html" id="current-page">BOOKS</a>
       </div>
       <div class="header-bottom">
         <div class="logo">
@@ -27,10 +27,10 @@
       </div>
     </header>
     <main>
-      <div id="sites">
-        <h1>Sites</h1>
-        <div class="site">
-          <a href="https://nobullshitcooking.net"><img src="../images/sites/nobullshitcooking.png" alt="nobullshitcooking.net"></a>
+      <div id="books">
+        <h1>Books</h1>
+        <div class="book">
+          EDIT
         </div>
       </div>
     </main>
