--- a/src/paintings/still-life/still-life.html
+++ b/src/paintings/still-life/still-life.html
@@ -29,18 +29,59 @@
     <main>
       <div id="thumbs">
         <h1>Still Life</h1>
+
+
         <a href="emptiness/emptiness.html"><div class="thumb">
-          <img src="../../images/paintings/still-life/t-j-alferes-painting-still-life-emptiness-2014-400px.jpg">
+          <img
+            srcset="
+              ../../images/paintings/still-life/t-j-alferes-painting-still-life-emptiness-2014-280px.jpg 280w,
+              ../../images/paintings/still-life/t-j-alferes-painting-still-life-emptiness-2014-400px.jpg 400w
+            "
+            sizes="
+              (max-width: 599px) 280px,
+              (min-width: 600px) 400px
+            "
+            src="../../images/paintings/still-life/t-j-alferes-painting-still-life-emptiness-2014-280px.jpg"
+            alt="Emptiness"
+          >
           <span>Emptiness</span>
         </div></a>
+
+
         <a href="rotting-mirepoix/rotting-mirepoix.html"><div class="thumb">
-          <img src="../../images/paintings/still-life/t-j-alferes-painting-still-life-rotting-mirepoix-2015-400px.jpg">
+          <img
+            srcset="
+              ../../images/paintings/still-life/t-j-alferes-painting-still-life-rotting-mirepoix-2015-280px.jpg 280w,
+              ../../images/paintings/still-life/t-j-alferes-painting-still-life-rotting-mirepoix-2015-400px.jpg 400w,
+            "
+            sizes="
+              (max-width: 599px) 280px,
+              (min-width: 600px) 400px
+            "
+            src="../../images/paintings/still-life/t-j-alferes-painting-still-life-rotting-mirepoix-2015-280px.jpg"
+            alt="Rotting Mirepoix"
+          >
           <span>Rotting Mirepoix</span>
         </div></a>
+
+
         <a href="old-teapot/old-teapot.html"><div class="thumb">
-          <img src="../../images/paintings/still-life/t-j-alferes-painting-still-life-old-teapot-2016-200px.jpg">
+          <img
+            srcset="
+              ../../images/paintings/still-life/t-j-alferes-painting-still-life-old-teapot-2016-140px.jpg 140w,
+              ../../images/paintings/still-life/t-j-alferes-painting-still-life-old-teapot-2016-200px.jpg 200w,
+            "
+            sizes="
+              (max-width: 599px) 140px,
+              (min-width: 600px) 200px
+            "
+            src="../../images/paintings/still-life/t-j-alferes-painting-still-life-old-teapot-2016-140px.jpg"
+            alt="Old Teapot"
+          >
           <span>Old Teapot</span>
         </div></a>
+
+
       </div>
     </main>
     <footer>
