--- a/src/sites/sites.html
+++ b/src/sites/sites.html
@@ -32,8 +32,15 @@
         <div class="site">
           <a href="https://nobullshitcooking.net">
             <img
-              src="../images/sites/nobullshitcooking-mobile.png"
-              srcset="../images/sites/nobullshitcooking-tablet.png 600w, ../images/sites/nobullshitcooking.png 1200w"
+              srcset="
+                ../images/sites/nobsc-logo-small.png 280w,
+                ../images/sites/nobsc-logo.png 448w
+              "
+              sizes="
+                (max-width: 599px) 280px,
+                (min-width: 600px) 448px
+              "
+              src="../images/sites/nobsc-logo-small.png"
               alt="nobullshitcooking.net"
             >
           </a>
